--- a/index.html
+++ b/index.html
@@ -1,1 +1,152 @@
-Hello World
+<!DOCTYPE html>
+
+<html lang="en-us">
+<head>
+	<meta charset="utf-8">
+
+	<title>Parth Shah</title>
+
+		
+	<!-- bootstrap css and javascript import -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	
+	<!-- font awesome import -->
+	<script src="https://use.fontawesome.com/f0c3b86930.js"></script>
+
+	<!-- google font import -->
+	<link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200italic,400,700" />
+	<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+
+	<!-- custom css for normalization and style-->
+	<link rel="stylesheet" href="css/normalize.css" />
+	<link rel="stylesheet" href="css/base.css" />
+
+
+</head>
+
+<body>
+	<nav class="navbar navbar-default navbar-fixed-top">
+		<div class="container-fluid">
+			<ul class="nav navbar-nav navbar-right">
+				<li><a href="#">Home</a></li>
+				<!--<li><a href="aboutme">About Me</a></li>-->
+				<li><a href="#education">Education</a></li> 
+				<li><a href="#experience">Experience</a></li> 
+				<li><a href="#projects">Projects</a></li> 
+				<li><a href="#contactme">Contact Me</a></li>
+			</ul>
+		</div>
+	</nav>
+
+	<div class="container-fluid">
+		
+		<div class = "row evendiv" >
+			<div class = "col-sm-4">
+				<div class = "vdivideleft">
+					<img src="image/profile.png">
+				</div>
+			</div class = "col-sm-8">
+				<div>
+					<h2>Parth Shah <br>
+					<a href="mailto:shahpart8891@gmail.com">shahparth8891@gmail.com</a></h2>
+				</div>
+			</div>
+		</div>
+		<a name="education"></a>
+		<div class = "row evendiv">
+			
+			<div class= "col-sm-8 data-left">
+				<h3>University of Bridgeport</h3>
+				<p>Master of Science <br>
+				Major: Computer Science <br>
+				Expected Graduation: Dec-2016
+				</p>
+				<br>
+				<h3>Gujarat Technological University</h3>
+				<p>Bachelor of Engineering<br>
+				Major: Computer Engineering <br>
+				Graduated: May-2012</p>
+			</div>
+			<div class= "col-sm-4 title">
+				<h2>Education</h2>
+			</div>
+		</div>
+		<a name="experience"></a>
+		<div class = "row evendiv">
+			
+			<div class= "col-sm-4 title">
+				<h2>Experience</h2>
+			</div>
+			<div class= "col-sm-8 data-right">
+				<h3>University of Bridgeport</h3>
+				<p>Graduate Research Assistant<br>
+				Project: Automatic gait balance detection system <br>
+				Time Duration: Jan-2015 - Present 
+				</p>
+				<br>
+				<h3>IBM India</h3>
+				<p>Application Developer<br>
+				Job Role: TIBCO Developer<br>
+				Time Duration: Dec-2012 - Dec-2014</p>
+			</div>
+			
+		</div>
+		<a name="projects"></a>
+		<div class = "row evendiv">
+			
+			<div class= "col-sm-8 data-left">
+				<h3>NYC Taxi Data Analysis</h3>
+				<p>University of Bridgeport '15</p>
+				<br>
+				<h3>Android Applications</h3>
+				<p>Freelancing ’12-‘14</p>
+				<br>
+				<h3>Penguin Download Manager</h3>
+				<p>GTU ‘12</p>
+			</div>
+			<div class= "col-sm-4 title">
+				<h2>Projects</h2>
+			</div>
+		</div>
+		<a name="contactme"></a>
+		<div class = "row evendiv">
+			
+			<div class= "col-sm-4 title">
+				<h2>Contact Me</h2>
+			</div>
+			<div class= "col-sm-8 data-right">
+				<h3>Parth Shah</h3>
+				<p>170, Lafayette Street<br>
+				Bridgeport, CT-06604<br>
+				Email: <a href="mailto:shahpart8891@gmail.com">shahparth8891@gmail.com</a><br>
+				&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<a href="mailto:parshah@my.bridgeport.edu">parshah@my.bridgeport.edu</a>
+				<br>
+				Contact No: +16313369989
+				</p>
+
+				<h3>Professional Profiles</h3>
+				<p>				
+				<a href="https://www.linkedin.com/in/parthshah8891" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+				<a href="https://github.com/parth8891/" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+				</p>
+				<h3>Social Profiles</h3>
+				<p>
+				<a href="https://www.facebook.com/parth8891" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+				<a href="https://www.instagram.com/parth8891/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+				<a href="https://plus.google.com/u/0/+Parthshah8891/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+				</p>			
+			</div>
+			
+		</div>
+
+		<!--<h1>Roger Zhou</h1>
+		<a href="https://github.com/rogerjiezhou"><i class="fa fa-github" aria-hidden="true"></i></a>
+		<p class="quote" >Practice makes man perfect!</p>-->
+	</div>
+</body>
+
+</html>
