--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<script src="https://use.fontawesome.com/f0c3b86930.js"></script>
 
 	<!-- google font import -->
-	<link href='http://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Josefin+Sans&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
 
 	<!-- custom css for normalization and style-->
 	<link rel="stylesheet" href="css/normalize.css" />
