icon size changed

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="en-us">
 <head>
@@ -138,14 +138,14 @@
 
 					<h3>Professional Profiles</h3>
 					<p>				
-						<a href="https://www.linkedin.com/in/parthshah8891" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-						<a href="https://github.com/parth8891/" target="_blank"><i class="fa fa-github-alt" aria-hidden="true"></i></a>
+						<a href="https://www.linkedin.com/in/parthshah8891" target="_blank"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
+						<a href="https://github.com/parth8891/" target="_blank"><i class="fa fa-github-alt fa-3x" aria-hidden="true"></i></a>
 					</p>
 					<h3>Social Profiles</h3>
 					<p>
-						<a href="https://www.facebook.com/parth8891" target="_blank"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-						<a href="https://www.instagram.com/parth8891/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-						<a href="https://plus.google.com/u/0/+Parthshah8891/" target="_blank"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+						<a href="https://www.facebook.com/parth8891" target="_blank"><i class="fa fa-facebook fa-3x" aria-hidden="true"></i></a>
+						<a href="https://www.instagram.com/parth8891/" target="_blank"><i class="fa fa-instagram fa-3x" aria-hidden="true"></i></a>
+						<a href="https://plus.google.com/u/0/+Parthshah8891/" target="_blank"><i class="fa fa-google-plus fa-3x" aria-hidden="true"></i></a>
 					</p>			
 					</div>
 				</div>
